--- a/contact/index.html
+++ b/contact/index.html
@@ -30,7 +30,7 @@
         <h1 class="title">Contact</h1>
 
         <p>
-            You can contact me by email: <a href="mailto:11811410@mail.sustc.edu.cn">11811410@mail.sustc.edu.cn</a>
+            You can contact me by email: <a href="mailto:11811410@mail.sustech.edu.cn">11811410@mail.sustech.edu.cn</a>
         </p>
     
         <p>
